src/JCGen/JCParser.java
// Generated from C:/compiler/compiler-p-/JCParser.g4 by ANTLR 4.13.2
package JCGen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOUBLE_LBRC=1, LBRC_PERCENT=2, LBRC_HASH=3, STYLE_OP=4, SLT=5, TAG_START=6, 
		HTML_COMMENT=7, DOCTYPE=8, HTML_TEXT=9, WS=10, TAG_N=11, WS1=12, ATTR_N1=13, 
		ASSIGN1=14, ATTR_V1=15, ATTR_WS=16, RT1=17, SRT1=18, CLOSE_TAG_N=19, CLOSE_RT=20, 
		CLOSE_WS=21, STYLE_CL=22, L_BRACE1=23, R_BRACE1=24, COMMA1=25, CSS_UNIVERSAL=26, 
		CSS_CLASS=27, CSS_ID=28, TAG_NAME=29, CSS_COMMENT=30, WS2=31, R_BRACE3=32, 
		FONT_FAMILY=33, BACKGROUND_COLOR=34, MARGIN=35, COLOR=36, DISPLAY=37, 
		FLEX_WRAP=38, GAP=39, BORDER_RADIUS=40, BORDER=41, PADDING=42, WIDTH=43, 
		HEIGHT=44, OBJECT_FIT=45, FONT_WEIGHT=46, MARGIN_TOP=47, MARGIN_BOTTOM=48, 
		MARGIN_LEFT=49, CURSOR=50, FLEX_DIRECTION=51, COLON1=52, CSS_COMMENT2=53, 
		WS_BLOCK=54, SEMICOLON1=55, HEX_COLOR=56, PX_VALUE=57, KEYWORD=58, CSS_VAL=59, 
		R_BRACE2=60, WS3=61, DOUBLE_RBRC=62, RBRC_PERCENT=63, J_FOR=64, J_IN=65, 
		J_IF=66, J_ELSE=67, J_ELIF=68, J_ENDIF=69, J_ENDFOR=70, J_BLOCK=71, J_ENDBLOCK=72, 
		J_EXTENDS=73, J_INCLUDE=74, J_SET=75, J_MACRO=76, J_ENDMACRO=77, STRING=78, 
		NUMBER=79, TRUE=80, FALSE=81, NIL=82, ID=83, AND=84, OR=85, NOT=86, LE_E=87, 
		GE_E=88, EQ=89, NE=90, LT=91, RT=92, ASSIGN=93, PLUS=94, MINUS=95, MULTI=96, 
		DIVIDE=97, PERCENT=98, DOT=99, LPAREN=100, RPAREN=101, LBRACK=102, RBRACK=103, 
		COMMA=104, WS_JINJA=105, RBRC_HASH=106, COMMENT_TEXT=107;
	public static final int
		RULE_document = 0, RULE_element = 1, RULE_htmlelements = 2, RULE_attributes = 3, 
		RULE_cssblock = 4, RULE_csscontent = 5, RULE_cssrules = 6, RULE_selector = 7, 
		RULE_cssdeclaration = 8, RULE_property = 9, RULE_csscomment = 10, RULE_jinjaexpression = 11, 
		RULE_jinjastatement = 12, RULE_jinjacomment = 13, RULE_expression = 14, 
		RULE_primary = 15, RULE_arguments = 16, RULE_statement = 17, RULE_ifstatement = 18, 
		RULE_forstatement = 19, RULE_blockstatement = 20, RULE_macrostatement = 21, 
		RULE_parameter = 22, RULE_parameters = 23, RULE_setstatement = 24, RULE_extendsstatement = 25, 
		RULE_includestatement = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "element", "htmlelements", "attributes", "cssblock", "csscontent", 
			"cssrules", "selector", "cssdeclaration", "property", "csscomment", "jinjaexpression", 
			"jinjastatement", "jinjacomment", "expression", "primary", "arguments", 
			"statement", "ifstatement", "forstatement", "blockstatement", "macrostatement", 
			"parameter", "parameters", "setstatement", "extendsstatement", "includestatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", "'{%'", "'{#'", "'<style>'", "'</'", null, null, null, 
			null, null, null, null, null, null, null, null, null, "'/>'", null, null, 
			null, "'</style>'", "'{'", null, null, null, null, null, null, null, 
			null, null, "'font-family'", "'background-color'", "'margin'", "'color'", 
			"'display'", "'flex-wrap'", "'gap'", "'border-radius'", "'border'", "'padding'", 
			"'width'", "'height'", "'object-fit'", "'font-weight'", "'margin-top'", 
			"'margin-bottom'", "'margin-left'", "'cursor'", "'flex-direction'", "':'", 
			null, null, "';'", null, null, null, null, null, null, "'}}'", "'%}'", 
			"'for'", "'in'", "'if'", "'else'", "'elif'", "'endif'", "'endfor'", "'block'", 
			"'endblock'", "'extends'", "'include'", "'set'", "'macro'", "'endmacro'", 
			null, null, null, null, null, null, "'and'", "'or'", "'not'", "'<='", 
			"'>='", "'=='", "'!='", null, null, null, "'+'", "'-'", null, "'/'", 
			"'%'", "'.'", "'('", "')'", "'['", "']'", null, null, "'#}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOUBLE_LBRC", "LBRC_PERCENT", "LBRC_HASH", "STYLE_OP", "SLT", 
			"TAG_START", "HTML_COMMENT", "DOCTYPE", "HTML_TEXT", "WS", "TAG_N", "WS1", 
			"ATTR_N1", "ASSIGN1", "ATTR_V1", "ATTR_WS", "RT1", "SRT1", "CLOSE_TAG_N", 
			"CLOSE_RT", "CLOSE_WS", "STYLE_CL", "L_BRACE1", "R_BRACE1", "COMMA1", 
			"CSS_UNIVERSAL", "CSS_CLASS", "CSS_ID", "TAG_NAME", "CSS_COMMENT", "WS2", 
			"R_BRACE3", "FONT_FAMILY", "BACKGROUND_COLOR", "MARGIN", "COLOR", "DISPLAY", 
			"FLEX_WRAP", "GAP", "BORDER_RADIUS", "BORDER", "PADDING", "WIDTH", "HEIGHT", 
			"OBJECT_FIT", "FONT_WEIGHT", "MARGIN_TOP", "MARGIN_BOTTOM", "MARGIN_LEFT", 
			"CURSOR", "FLEX_DIRECTION", "COLON1", "CSS_COMMENT2", "WS_BLOCK", "SEMICOLON1", 
			"HEX_COLOR", "PX_VALUE", "KEYWORD", "CSS_VAL", "R_BRACE2", "WS3", "DOUBLE_RBRC", 
			"RBRC_PERCENT", "J_FOR", "J_IN", "J_IF", "J_ELSE", "J_ELIF", "J_ENDIF", 
			"J_ENDFOR", "J_BLOCK", "J_ENDBLOCK", "J_EXTENDS", "J_INCLUDE", "J_SET", 
			"J_MACRO", "J_ENDMACRO", "STRING", "NUMBER", "TRUE", "FALSE", "NIL", 
			"ID", "AND", "OR", "NOT", "LE_E", "GE_E", "EQ", "NE", "LT", "RT", "ASSIGN", 
			"PLUS", "MINUS", "MULTI", "DIVIDE", "PERCENT", "DOT", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "COMMA", "WS_JINJA", "RBRC_HASH", "COMMENT_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JCParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JCParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 990L) != 0)) {
				{
				{
				setState(54);
				element();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public HtmlelementsContext htmlelements() {
			return getRuleContext(HtmlelementsContext.class,0);
		}
		public CssblockContext cssblock() {
			return getRuleContext(CssblockContext.class,0);
		}
		public JinjaexpressionContext jinjaexpression() {
			return getRuleContext(JinjaexpressionContext.class,0);
		}
		public JinjastatementContext jinjastatement() {
			return getRuleContext(JinjastatementContext.class,0);
		}
		public JinjacommentContext jinjacomment() {
			return getRuleContext(JinjacommentContext.class,0);
		}
		public TerminalNode HTML_COMMENT() { return getToken(JCParser.HTML_COMMENT, 0); }
		public TerminalNode DOCTYPE() { return getToken(JCParser.DOCTYPE, 0); }
		public List<TerminalNode> HTML_TEXT() { return getTokens(JCParser.HTML_TEXT); }
		public TerminalNode HTML_TEXT(int i) {
			return getToken(JCParser.HTML_TEXT, i);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			int _alt;
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				htmlelements();
				}
				break;
			case STYLE_OP:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				cssblock();
				}
				break;
			case DOUBLE_LBRC:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				jinjaexpression();
				}
				break;
			case LBRC_PERCENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				jinjastatement();
				}
				break;
			case LBRC_HASH:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				jinjacomment();
				}
				break;
			case HTML_COMMENT:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				match(HTML_COMMENT);
				}
				break;
			case DOCTYPE:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				match(DOCTYPE);
				}
				break;
			case HTML_TEXT:
				enterOuterAlt(_localctx, 8);
				{
				setState(70); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(69);
						match(HTML_TEXT);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(72); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlelementsContext extends ParserRuleContext {
		public TerminalNode TAG_START() { return getToken(JCParser.TAG_START, 0); }
		public TerminalNode TAG_N() { return getToken(JCParser.TAG_N, 0); }
		public TerminalNode RT1() { return getToken(JCParser.RT1, 0); }
		public TerminalNode SLT() { return getToken(JCParser.SLT, 0); }
		public TerminalNode CLOSE_TAG_N() { return getToken(JCParser.CLOSE_TAG_N, 0); }
		public TerminalNode CLOSE_RT() { return getToken(JCParser.CLOSE_RT, 0); }
		public List<AttributesContext> attributes() {
			return getRuleContexts(AttributesContext.class);
		}
		public AttributesContext attributes(int i) {
			return getRuleContext(AttributesContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TerminalNode SRT1() { return getToken(JCParser.SRT1, 0); }
		public HtmlelementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlelements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterHtmlelements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitHtmlelements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitHtmlelements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlelementsContext htmlelements() throws RecognitionException {
		HtmlelementsContext _localctx = new HtmlelementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlelements);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(TAG_START);
				setState(77);
				match(TAG_N);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ATTR_N1) {
					{
					{
					setState(78);
					attributes();
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				match(RT1);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 990L) != 0)) {
					{
					{
					setState(85);
					element();
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91);
				match(SLT);
				setState(92);
				match(CLOSE_TAG_N);
				setState(93);
				match(CLOSE_RT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(TAG_START);
				setState(95);
				match(TAG_N);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ATTR_N1) {
					{
					{
					setState(96);
					attributes();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(SRT1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributesContext extends ParserRuleContext {
		public TerminalNode ATTR_N1() { return getToken(JCParser.ATTR_N1, 0); }
		public TerminalNode ASSIGN1() { return getToken(JCParser.ASSIGN1, 0); }
		public TerminalNode ATTR_V1() { return getToken(JCParser.ATTR_V1, 0); }
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitAttributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributes);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(ATTR_N1);
				setState(106);
				match(ASSIGN1);
				setState(107);
				match(ATTR_V1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(ATTR_N1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CssblockContext extends ParserRuleContext {
		public TerminalNode STYLE_OP() { return getToken(JCParser.STYLE_OP, 0); }
		public CsscontentContext csscontent() {
			return getRuleContext(CsscontentContext.class,0);
		}
		public TerminalNode STYLE_CL() { return getToken(JCParser.STYLE_CL, 0); }
		public CssblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cssblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterCssblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitCssblock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitCssblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CssblockContext cssblock() throws RecognitionException {
		CssblockContext _localctx = new CssblockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cssblock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(STYLE_OP);
			setState(112);
			csscontent();
			setState(113);
			match(STYLE_CL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CsscontentContext extends ParserRuleContext {
		public List<CssrulesContext> cssrules() {
			return getRuleContexts(CssrulesContext.class);
		}
		public CssrulesContext cssrules(int i) {
			return getRuleContext(CssrulesContext.class,i);
		}
		public List<CsscommentContext> csscomment() {
			return getRuleContexts(CsscommentContext.class);
		}
		public CsscommentContext csscomment(int i) {
			return getRuleContext(CsscommentContext.class,i);
		}
		public List<TerminalNode> WS2() { return getTokens(JCParser.WS2); }
		public TerminalNode WS2(int i) {
			return getToken(JCParser.WS2, i);
		}
		public CsscontentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_csscontent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterCsscontent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitCsscontent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitCsscontent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CsscontentContext csscontent() throws RecognitionException {
		CsscontentContext _localctx = new CsscontentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_csscontent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(118);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CSS_UNIVERSAL:
				case CSS_CLASS:
				case CSS_ID:
				case TAG_NAME:
					{
					setState(115);
					cssrules();
					}
					break;
				case CSS_COMMENT:
					{
					setState(116);
					csscomment();
					}
					break;
				case WS2:
					{
					setState(117);
					match(WS2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4227858432L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CssrulesContext extends ParserRuleContext {
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public TerminalNode L_BRACE1() { return getToken(JCParser.L_BRACE1, 0); }
		public TerminalNode R_BRACE3() { return getToken(JCParser.R_BRACE3, 0); }
		public List<CssdeclarationContext> cssdeclaration() {
			return getRuleContexts(CssdeclarationContext.class);
		}
		public CssdeclarationContext cssdeclaration(int i) {
			return getRuleContext(CssdeclarationContext.class,i);
		}
		public List<CsscommentContext> csscomment() {
			return getRuleContexts(CsscommentContext.class);
		}
		public CsscommentContext csscomment(int i) {
			return getRuleContext(CsscommentContext.class,i);
		}
		public List<TerminalNode> WS2() { return getTokens(JCParser.WS2); }
		public TerminalNode WS2(int i) {
			return getToken(JCParser.WS2, i);
		}
		public CssrulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cssrules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterCssrules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitCssrules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitCssrules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CssrulesContext cssrules() throws RecognitionException {
		CssrulesContext _localctx = new CssrulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cssrules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			selector();
			setState(123);
			match(L_BRACE1);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4503594258661376L) != 0)) {
				{
				setState(127);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FONT_FAMILY:
				case BACKGROUND_COLOR:
				case MARGIN:
				case COLOR:
				case DISPLAY:
				case FLEX_WRAP:
				case GAP:
				case BORDER_RADIUS:
				case BORDER:
				case PADDING:
				case WIDTH:
				case HEIGHT:
				case OBJECT_FIT:
				case FONT_WEIGHT:
				case MARGIN_TOP:
				case MARGIN_BOTTOM:
				case MARGIN_LEFT:
				case CURSOR:
				case FLEX_DIRECTION:
					{
					setState(124);
					cssdeclaration();
					}
					break;
				case CSS_COMMENT:
					{
					setState(125);
					csscomment();
					}
					break;
				case WS2:
					{
					setState(126);
					match(WS2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(R_BRACE3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorContext extends ParserRuleContext {
		public TerminalNode CSS_UNIVERSAL() { return getToken(JCParser.CSS_UNIVERSAL, 0); }
		public TerminalNode CSS_CLASS() { return getToken(JCParser.CSS_CLASS, 0); }
		public TerminalNode CSS_ID() { return getToken(JCParser.CSS_ID, 0); }
		public TerminalNode TAG_NAME() { return getToken(JCParser.TAG_NAME, 0); }
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).enterSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCParserListener ) ((JCParserListener)listener).exitSelector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCParserVisitor ) return ((JCParserVisitor<? extends T>)visitor).visitSelector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1006632960L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
